--- a/style/architect.css
+++ b/style/architect.css
@@ -128,17 +128,30 @@ main{
     border-left: 5px solid #FD6E0A;
     padding-left: 20px;
 }
+.features-img img{
+    /* width: 100%; */
+    height: 90%;
+    margin-left: 90px;
+}
 .ten-years-badge{
     border-radius: 8px;
     background: #FF900E;
     color: #FFF;
-    width: 342px;
+    width: 340px;
     padding: 40px ;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 
 }
 .ten-years-badge h2{
     font-size: 4rem;
+    margin: 0;
 
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+    /* text-align: left; */
 }
 
 /* facts section  */
@@ -190,8 +203,17 @@ main{
     }
     nav, .teams-container,
     .facts-card-container,
-    .sponsors-img-container{
+    .sponsors-img-container,
+    .features{
         flex-direction: column;
+    }
+    .features-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 350px;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -211,7 +233,8 @@ main{
         padding: 50px;
     }
     nav, .teams-container,
-    .sponsors-img-container{
+    .sponsors-img-container,
+    .features{
         flex-direction: column;
     }
 
